added header and section text

--- a/sequences/sequences.tex
+++ b/sequences/sequences.tex
@@ -1,2 +1,6 @@
-\include{arithmetic-sequences/recursive-formula-of-arithmeticsequence.tex}
-\include{arithmetic-sequences/general-formula-of-arithmeticsequence.tex}
+\section{Sequences}
+
+Sequences text goes here
+
+\input{sequences/arithmetic-sequences/recursive-formula-of-an-arithmetic-sequence.tex}
+\input{sequences/arithmetic-sequences/general-formula-of-an-arithmetic-sequence.tex}
