switched section/subsection/subsubsection ordering

--- a/sequences/arithmetic-sequences/general-formula-of-an-arithmetic-sequence.tex
+++ b/sequences/arithmetic-sequences/general-formula-of-an-arithmetic-sequence.tex
@@ -1,4 +1,4 @@
-\subsection{General Formula of an Arithmetic Sequence}
+\subsubsection{General Formula of an Arithmetic Sequence}
 
 The general formula of an arithmetic sequence can be represented as \[ t_n = t_1 + (n-1)d \] where 
 \begin{itemize}
