--- a/sequences/sequences.tex
+++ b/sequences/sequences.tex
@@ -1,8 +1,6 @@
 \section{Sequences}
 
-Sequences text goes here. 
-
-I'm now adding a line of text to make a change to show Jon how Git works.
+\subsection{Arithmetic Sequences}
 
 \input{sequences/arithmetic-sequences/recursive-formula-of-an-arithmetic-sequence.tex}
 \input{sequences/arithmetic-sequences/general-formula-of-an-arithmetic-sequence.tex}
