incomplete: wrote notation section

--- a/sequences/sequences.tex
+++ b/sequences/sequences.tex
@@ -1,6 +1,25 @@
 \section{Sequences}
 
+Sequences are a collection of objects in some particular order.
+
+\subsubsection{Notation}
+
+A sequence is written in the form $t_1, t_2, \dots, t_n$ where $t_1$, $t_2$, and $t_n$ represent the first, second and $n$th terms of the sequence respectively. \\
+
+\begin{tcolorbox}
+Let us consider the sequence of odd numbers $1, 3, 5, \dots$. We can then identify the terms as follows:  
+
+\begin{tabular}{|c|c|c|c|c|c|}
+  \hline
+  $t_1$ & $t_2$ & $t_3$ & $t_4$ & $\dots$ & $t_n$ \\
+  \hline
+  1 & 3 & 5 & 7 & \dots & $2n-1$ \\
+  \hline
+\end{tabular}
+\end{tcolorbox}
+
 \subsection{Arithmetic Sequences}
 
+\input{sequences/arithmetic-sequences/intro-arithmetic-sequences.tex}
 \input{sequences/arithmetic-sequences/recursive-formula-of-an-arithmetic-sequence.tex}
 \input{sequences/arithmetic-sequences/general-formula-of-an-arithmetic-sequence.tex}
