got tcolorbox working

--- a/sequences/sequences.tex
+++ b/sequences/sequences.tex
@@ -6,7 +6,15 @@ Sequences are a collection of objects in some particular order.
 
 A sequence is written in the form $t_1, t_2, \dots, t_n$ where $t_1$, $t_2$, and $t_n$ represent the first, second and $n$th terms of the sequence respectively. \\
 
-\begin{tcolorbox}
+\begin{tcolorbox}[enhanced,
+  attach boxed title to top left,
+  colback=blue!5!white,
+  colframe=blue!75!black,
+  colbacktitle=red!80!black,
+  title=Example,
+  fonttitle=\bfseries,
+  boxed title style={size=small,colframe=red!50!black}
+  ]
 Let us consider the sequence of odd numbers $1, 3, 5, \dots$. We can then identify the terms as follows:  
 
 \begin{tabular}{|c|c|c|c|c|c|}
