--- a/sequences/arithmetic-sequences/intro-arithmetic-sequences.tex
+++ b/sequences/arithmetic-sequences/intro-arithmetic-sequences.tex
@@ -1,1 +1,40 @@
-Arithmetic sequences are sequences where each term differs by the same amount. 
+Arithmetic sequences are sequences where each term differs by the same amount (referred to as the common difference). Examples of arithmetic sequences include:
+
+\begin{itemize}
+  \item $1, 3, 5, 7, 9, 11, \dots$ (odd numbers)
+  \item $2, 4, 6, 8, 10, 12, \dots$ (even numbers)
+  \item $5, 10, 15, 20, 25, 30, 35, \dots$ (multiples of 5)
+  \item $-4, -1, 2, 5, 8, 11, \dots$ 
+\end{itemize}
+
+An arithmetic sequence has two key components that allow us to determine all of its terms:
+
+\begin{itemize}
+  \item a starting term, denoted $t_1$ ($a$ in other resources), and
+  \item a common difference, denoted $d$.
+\end{itemize}
+
+\begin{tcolorbox}[enhanced,
+  attach boxed title to top left,
+  colback=blue!5!white,
+  colframe=blue!75!black,
+  colbacktitle=red!80!black,
+  title=Example,
+  fonttitle=\bfseries,
+  boxed title style={size=small,colframe=red!50!black}
+  ]
+
+  Using the same examples as listed at the beginning of the chapter:
+
+  \begin{tabular}{|l|c|c|}
+    \hline
+    Arithmetic Sequence & $t_1$ & $d$ \\
+    \hline
+    $1, 3, 5, 7, 9, 11, \dots$ & 1 & 2 \\ 
+    $2, 4, 6, 8, 10, 12, \dots$ & 2 & 2 \\
+    $5, 10, 15, 20, 25, 30, 35, \dots$ & 5 & -4 \\
+    $-4, -1, 2, 5, 8, 11, \dots$ & -4 & 3 \\
+    \hline
+  \end{tabular}
+
+\end{tcolorbox}
