--- a/sequences/arithmetic-sequences/intro-arithmetic-sequences.tex
+++ b/sequences/arithmetic-sequences/intro-arithmetic-sequences.tex
@@ -14,16 +14,7 @@ An arithmetic sequence has two key components that allow us to determine all of 
   \item a common difference, denoted $d$.
 \end{itemize}
 
-\begin{tcolorbox}[enhanced,
-  attach boxed title to top left,
-  colback=blue!5!white,
-  colframe=blue!75!black,
-  colbacktitle=red!80!black,
-  title=Example,
-  fonttitle=\bfseries,
-  boxed title style={size=small,colframe=red!50!black}
-  ]
-
+\boxedExample{
   Using the same examples as listed at the beginning of the chapter:
 
   \begin{tabular}{|l|c|c|}
@@ -36,5 +27,4 @@ An arithmetic sequence has two key components that allow us to determine all of 
     $-4, -1, 2, 5, 8, 11, \dots$ & -4 & 3 \\
     \hline
   \end{tabular}
-
-\end{tcolorbox}
+}
