added centering to tables in boxedexamples

--- a/sequences/sequences.tex
+++ b/sequences/sequences.tex
@@ -8,14 +8,15 @@ A sequence is written in the form $t_1, t_2, \dots, t_n$ where $t_1$, $t_2$, and
 
 \boxedExample{
   Let us consider the sequence of odd numbers $1, 3, 5, \dots$. We can then identify the terms as follows:  
-
-  \begin{tabular}{|c|c|c|c|c|c|}
-    \hline
-    $t_1$ & $t_2$ & $t_3$ & $t_4$ & $\dots$ & $t_n$ \\
-    \hline
-    1 & 3 & 5 & 7 & \dots & $2n-1$ \\
-    \hline
-  \end{tabular}
+  \begin{center}
+    \begin{tabular}{|c|c|c|c|c|c|}
+      \hline
+      $t_1$ & $t_2$ & $t_3$ & $t_4$ & $\dots$ & $t_n$ \\
+      \hline
+      1 & 3 & 5 & 7 & \dots & $2n-1$ \\
+      \hline
+    \end{tabular}
+  \end{center}
 }
 
 \subsection{Arithmetic Sequences}
