--- a/sequences/arithmetic-sequences/intro-arithmetic-sequences.tex
+++ b/sequences/arithmetic-sequences/intro-arithmetic-sequences.tex
@@ -16,15 +16,16 @@ An arithmetic sequence has two key components that allow us to determine all of 
 
 \boxedExample{
   Using the same examples as listed at the beginning of the chapter:
-
-  \begin{tabular}{|l|c|c|}
-    \hline
-    Arithmetic Sequence & $t_1$ & $d$ \\
-    \hline
-    $1, 3, 5, 7, 9, 11, \dots$ & 1 & 2 \\ 
-    $2, 4, 6, 8, 10, 12, \dots$ & 2 & 2 \\
-    $5, 10, 15, 20, 25, 30, 35, \dots$ & 5 & -4 \\
-    $-4, -1, 2, 5, 8, 11, \dots$ & -4 & 3 \\
-    \hline
-  \end{tabular}
+  \begin{center}
+    \begin{tabular}{|l|c|c|}
+      \hline
+      Arithmetic Sequence & $t_1$ & $d$ \\
+      \hline
+      $1, 3, 5, 7, 9, 11, \dots$ & 1 & 2 \\ 
+      $2, 4, 6, 8, 10, 12, \dots$ & 2 & 2 \\
+      $5, 10, 15, 20, 25, 30, 35, \dots$ & 5 & -4 \\
+      $-4, -1, 2, 5, 8, 11, \dots$ & -4 & 3 \\
+      \hline
+    \end{tabular}
+  \end{center}
 }
