--- a/sequences/arithmetic-sequences/intro-arithmetic-sequences.tex
+++ b/sequences/arithmetic-sequences/intro-arithmetic-sequences.tex
@@ -14,7 +14,7 @@ An arithmetic sequence has two key components that allow us to determine all of 
   \item a common difference, denoted $d$.
 \end{itemize}
 
-\boxedExample{
+\BoxedExample{
   Using the same examples as listed at the beginning of the chapter:
   \begin{center}
     \begin{tabular}{|l|c|c|}
