--- a/sequences/sequences.tex
+++ b/sequences/sequences.tex
@@ -6,7 +6,7 @@ Sequences are a collection of objects in some particular order.
 
 A sequence is written in the form $t_1, t_2, \dots, t_n$ where $t_1$, $t_2$, and $t_n$ represent the first, second and $n$th terms of the sequence respectively. \\
 
-\boxedExample{
+\BoxedExample{
   Let us consider the sequence of odd numbers $1, 3, 5, \dots$. We can then identify the terms as follows:  
   \begin{center}
     \begin{tabular}{|c|c|c|c|c|c|}
