added geometric sequence section + files

--- a/sequences/sequences.tex
+++ b/sequences/sequences.tex
@@ -24,3 +24,9 @@ A sequence is written in the form $t_1, t_2, \dots, t_n$ where $t_1$, $t_2$, and
 \input{sequences/arithmetic-sequences/intro-arithmetic-sequences.tex}
 \input{sequences/arithmetic-sequences/recursive-formula-of-an-arithmetic-sequence.tex}
 \input{sequences/arithmetic-sequences/general-formula-of-an-arithmetic-sequence.tex}
+
+\subsection{Geometric Sequences}
+
+\input{sequences/geometric-sequences/intro-geometric-sequences.tex}
+\input{sequences/geometric-sequences/recursive-formula-of-a-geometric-sequence.tex}
+\input{sequences/geometric-sequences/general-formula-of-a-geometric-sequence.tex}
